--- a/src/Core/TQM.Backoffice.Application/TQM.Backoffice.Core.Application.csproj
+++ b/src/Core/TQM.Backoffice.Application/TQM.Backoffice.Core.Application.csproj
@@ -17,6 +17,7 @@
 		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.3.5" />
 		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="System.Data.OleDb" Version="6.0.0" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.0" />
