--- a/src/Infrastructure/TQM.BackOffice.RESTApi/TQM.BackOffice.RESTApi.csproj
+++ b/src/Infrastructure/TQM.BackOffice.RESTApi/TQM.BackOffice.RESTApi.csproj
@@ -7,6 +7,8 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="System.Data.OleDb" Version="6.0.0" />
+		<PackageReference Include="Confluent.Kafka" Version="2.2.0" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
 	</ItemGroup>
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
