--- a/src/Core/TQM.Backoffice.Application/TQM.Backoffice.Core.Application.csproj
+++ b/src/Core/TQM.Backoffice.Application/TQM.Backoffice.Core.Application.csproj
@@ -22,6 +22,9 @@
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Queries\Common\" />
+	</ItemGroup>
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
