--- a/src/API/appsettings.Development.json
+++ b/src/API/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Kafka": {
+    "BootstrapServers": "localhost:9092",
+    "GroupId": "ecommerce-order-group"
   }
 }
