--- a/src/Infrastructure/TQM.BackOffice.Persistence/TQM.BackOffice.Persistence.csproj
+++ b/src/Infrastructure/TQM.BackOffice.Persistence/TQM.BackOffice.Persistence.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="MailKit" Version="4.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.8" />
     <PackageReference Include="MimeKit" Version="4.1.0" />
